fix figure path, maybe.

--- a/caseStudyWP/02-chap2.Rmd
+++ b/caseStudyWP/02-chap2.Rmd
@@ -31,8 +31,8 @@ The State of the Salmon program (Fisheries and Oceans Canada) is developing a me
 
 
 ```{r decision-tree, fig.cap="Decision tree to assess status of Conservation Units based on the Wild Salmon Policy, under development by State of the Salmon Program", warning=FALSE, echo=FALSE, fig.align="center"}
-source(here::here("R/make_tree_diagram.R"))
-knitr::include_graphics(here::here("figure/decision_tree.png"))
+source(here::here("caseStudyWP/R/make_tree_diagram.R"))
+knitr::include_graphics(here::here("caseStudyWP/figure/decision_tree.png"))
 ```
 
 
